<resources>
    <string name="app_name">Cipher</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="action_deconnexion">Déconnexion</string>
    <string name="action_about">About</string>
    <string name="title_activity_detail_publication">Détail Publication</string>
    <string name="title_activity_add_publication">Ajouter une Publication</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="text_all_publications">All publications</string>
    <string name="text_my_publication">My Publication</string>
</resources>
